
    "uri":"/non_printable_\\x07"

  to

    "uri":"/non_printable_\u0007"

- For SNMPv3, the ``community`` field of the snmp log now contains the SNMPv3 username
  (if present). Before, the field was empty for all SNMPv3 connections.

- The ``x509.log`` deduplication logic has been reimplemented with explicit
  ``Cluster::publish()``, rather than relying ``&backend`` tables using Broker.

Removed Functionality
---------------------

Deprecated Functionality
------------------------

- In Zeek 9.1, returning a value from a hook will become an error. Return values
  from a hooks were previously silently discarded. This behavior was found
  surprising in relation with the ``break`` statement available in hooks.

- The ``zeek::util::json_escape_utf8`` methods are being replaced by a new ``escape_utf8``
  method in order to fix a bug with how the ``escape_printable_controls`` argument was
  implemented. Previously, it was implemented in the reverse of what was intuitive given
  the name. It would escape the control characters when false, and not escape them when
  true. The new method has the correct semantics, as well as a new argument for
  controlling whether non-printable control characters are escaped.

- The ``zeromq/connect`` script has been deprecated. Load the
  ``frameworks/cluster/backend/zeromq`` package directly instead.

Zeek 8.0.0
==========

We would like to thank @aidans111, Anthony Verez (@netantho), Baa (@Baa14453),
Bhaskar Bhar (@bhaskarbhar), @dwhitemv25, EdKo (@ephikos), @edoardomich, Fupeng
Zhao (@AmazingPP), hendrik.schwartke@os-s.de (@hendrikschwartke), @i2z1, Jan
Grashöfer (@J-Gras) Jean-Samuel Marier, Justin Azoff (@JustinAzoff), Mario D
(@mari0d), Markus Elfring (@elfring), Peter Cullen (@pbcullen), Sean Donaghy,
Simeon Miteff (@simeonmiteff), Steve Smoot (@stevesmoot), @timo-mue,
@wojciech-graj, and Xiaochuan Ye (@XueSongTap) for their contributions to this
release.

Breaking Changes
----------------
