@@ -829,6 +829,7 @@ if (ZEEK_SANITIZERS)
     # https://cmake.org/pipermail/cmake/2014-August/058268.html
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${_sanitizer_flags}")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${_sanitizer_flags}")
+    set(ZEEK_SANITIZER_CXX_FLAGS ${_sanitizer_flags})
 endif ()
 
 # ##############################################################################
